<resources>
    <string name="app_name" translatable="false">DemoApplication</string>
    <string name="hello">Hello from Deep Link</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dynamic_features">Dynamic Features</string>
    <string name="battery_settings">Battery Settings</string>
    <string name="menu_cloud_function">Cloud Function</string>
    <string name="menu_map">Map</string>
    <string name="menu_remote">Remote</string>
    <string name="menu_crash">Crash</string>
    <string name="menu_drive">Drive</string>
    <string name="sign_with_your_account">Sign In with your favourite account</string>
    <string name="use_mail">Or access with your email</string>
    <string name="validate_mail">Validate email</string>

    <string name="fb_login">Continue with Facebook</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Crash</string>
    <string name="sign_hw_id">Sign In with HUAWEI ID</string>
    <string name="anonymous">Anonymous Account</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="home_second">Home Second</string>
    <string name="title_dynamicfeature1">dynamicfeature1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_link_builder">App Link Builder</string>
    <string name="name">Your Name</string>
    <string name="generate_deep_link">Generate Deep Link</string>
    <string name="result">Result</string>
    <string name="menu_link">App Link</string>
    <string name="menu_publish_api">Publish API</string>
    <string name="channel_name">ABTesting</string>
    <string name="perform_publish">Test the Publish API</string>
    <string name="menu_device_id">Device Id</string>
    <string name="get_oaid">Get OAID</string>
    <string name="get_aaid">Get AAID</string>

    <string name="accountBind">Do Account Binding</string>
    <string name="accountBinding">Account Binding</string>
    <string name="obtainedDeepLink">Obtained deeplink:</string>
    <string name="waitingResult">Waiting for Result</string>
    <string name="load_dialog_title">Connecting</string>
    <string name="load_dialog_message">Please Wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attention">Attention</string>
    <string name="cf_message">Please provide two numbers to sum</string>
    <string name="user_info">Obtaining Information</string>
    <string name="user_files">Obtaining File List</string>
    <string name="Download">Download</string>
    <string name="menu_ads">Ads</string>

    <string name="fb_login_protocol_scheme" translatable="false">fb537899863809521</string>
    <string name="facebook_app_id" translatable="false">537899863809521</string>
    <string name="pushAppId">appid=102405457</string>
    <string name="google_client_id">"551750913679-tpmvq9jb2l3jnqq61q7cbjg0hnqrj9hi.apps.googleusercontent.com"</string>
</resources>
